--- a/charts/elasticoperator/templates/configmap.yaml
+++ b/charts/elasticoperator/templates/configmap.yaml
@@ -6,12 +6,12 @@ metadata:
   namespace : {{ .Release.Namespace}}
 data:
   # property-like keys; each key maps to a simple value
-  apikeyRollover: {{ .Values.configmap.apikeyRollover}}
-  maxRetries: {{ .Values.configmap.maxRetries}}
-  keyVault: {{ .Values.configmap.keyVault}}
-  elasticUserSecretSuffix: {{ .Values.configmap.elasticUserSecretSuffix}}
-  ReconLoopInterval: {{ .Values.configmap.ReconLoopInterval}}
-  ApiGroup: {{ .Values.configmap.ApiGroup}}
-  ApiVersion: {{ .Values.configmap.ApiVersion}}
-  CacheTtl: {{ .Values.configmap.CacheTtl}}
-  Namespace: {{ .Release.Namespace}}
+  apikeyRollover: "{{ .Values.configmap.apikeyRollover}}"
+  maxRetries: "{{ .Values.configmap.maxRetries}}"
+  keyVault: "{{ .Values.configmap.keyVault}}"
+  elasticUserSecretSuffix: "{{ .Values.configmap.elasticUserSecretSuffix}}"
+  ReconLoopInterval: "{{ .Values.configmap.ReconLoopInterval}}"
+  ApiGroup: "{{ .Values.configmap.ApiGroup}}"
+  ApiVersion: "{{ .Values.configmap.ApiVersion}}"
+  CacheTtl: "{{ .Values.configmap.CacheTtl}}"
+  Namespace: "{{ .Release.Namespace}}"
