--- a/charts/elasticoperator/templates/service.yaml
+++ b/charts/elasticoperator/templates/service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-   name: "{{ .Release.Name }}"-service
-   namespace: "{{ .Release.Namespace }}"
+   name: {{ .Release.Name }}-service
+   namespace: {{ .Release.Namespace }}
 spec:
    selector:
       app: "{{ .Release.Name}}"
