--- a/charts/elasticoperator/templates/configmap.yaml
+++ b/charts/elasticoperator/templates/configmap.yaml
@@ -15,3 +15,5 @@ data:
   ApiVersion: "{{ .Values.configmap.ApiVersion}}"
   CacheTtl: "{{ .Values.configmap.CacheTtl}}"
   Namespace: "{{ .Release.Namespace}}"
+  LongRunningCheck: "{{ .Values.configmap.LongRunningCheck}}"
+  LongRunningMax: "{{ .Values.configmap.LongRunningMax}}"
