--- a/charts/elasticoperator/templates/role.yaml
+++ b/charts/elasticoperator/templates/role.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-  name: {{ .Release.Name}}-cluster-role
+  name: {{ .Release.Name}}-role
   namespace: {{ .Release.Namespace}}
 rules:
   - apiGroups:
