--- a/charts/elasticoperator/templates/serviceaccount.yaml
+++ b/charts/elasticoperator/templates/serviceaccount.yaml
@@ -3,4 +3,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Release.Name}}-svc
-  namespace: {{ .Release.Namespace}}
+  namespace: {{ .Operator.Namespace}}
