--- a/charts/elasticoperator/templates/role.yaml
+++ b/charts/elasticoperator/templates/role.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ .Release.Name}}-role
+  name: {{ .Release.Name}}-{{ .Values.Operator.Role }}
   namespace: {{ .Release.Namespace}}
 rules:
   - apiGroups:
