--- a/charts/elasticoperator/templates/rolebinding.yaml
+++ b/charts/elasticoperator/templates/rolebinding.yaml
@@ -2,13 +2,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Release.Name}}-cluster-role-binding
+  name: {{ .Release.Name}}-role-binding
   namespace: {{ .Values.Operator.Namespace}}
 subjects:
 - namespace: {{ .Values.Operator.Namespace}} 
   kind: ServiceAccount
-  name: {{ .Release.Name}}-svc
+  name: {{ .Release.Name}}-{{ .Values.Operator.Sa}}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ .Release.Name}}-role
+  name: {{ .Release.Name}}-{{ .Values.Operator.Role }}
+  namespace: {{ .Release.Namespace }}
