--- a/charts/elasticoperator/templates/serviceaccount.yaml
+++ b/charts/elasticoperator/templates/serviceaccount.yaml
@@ -2,5 +2,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Release.Name}}-svc
+  name: {{ .Release.Name}}-{{ .Values.Operator.Sa}}
   namespace: {{ .Values.Operator.Namespace}}
