--- a/charts/elasticoperator/templates/clusterrole.yaml
+++ b/charts/elasticoperator/templates/clusterrole.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ .Release.Name}}-{{ .Values.Operator.Role }}
-  namespace: {{ .Values.Operator.Namespace }}
+  namespace: {{ .Release.Namespace }}
 rules:
   - apiGroups:
         - ""
