--- a/charts/elasticoperator/templates/configmap.yaml
+++ b/charts/elasticoperator/templates/configmap.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name}}-configmap
-  namespace : {{ .Values.Operator.Namespace}}
+  namespace : {{ .Release.Namespace}}
 data:
   # property-like keys; each key maps to a simple value
   apikeyRollover: "{{ .Values.configmap.apikeyRollover}}"
