--- a/charts/elasticoperator/templates/deployment.yaml
+++ b/charts/elasticoperator/templates/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Release.Name}}
-  namespace : {{ .Values.Operator.Namespace}}
+  namespace : {{ .Release.Namespace}}
 spec:
   selector:
     matchLabels:
