--- a/clusters/dev/elasticoperator/release.yaml
+++ b/clusters/dev/elasticoperator/release.yaml
@@ -2,10 +2,10 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata: 
   name: elasticoperator
-  namespace: {{ .Values.Operator.Namespace }}
+  namespace: "system"
 spec:
   releaseName: elasticoperator
-  targetNamespace: {{ .Values.Operator.Namespace }}
+  targetNamespace: "system"
   chart:
     spec:
       chart: ./charts/elasticoperator
@@ -14,7 +14,4 @@ spec:
         name: flux-elastic
         namespace: flux-system
   interval: 1m
-  values:
-    configmap: 
-      healthPort: 15001
 
