--- a/clusters/dev/elasticoperator/release.yaml
+++ b/clusters/dev/elasticoperator/release.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata: 
-  name: elasticoperator-hr
+  name: elasticoperator
   namespace: system
 spec:
-  releaseName: elasticoperator-hr
+  releaseName: elasticoperator
   targetNamespace: system
   chart:
     spec:
