--- a/charts/elasticoperator/templates/configmap.yaml
+++ b/charts/elasticoperator/templates/configmap.yaml
@@ -6,14 +6,14 @@ metadata:
   namespace : {{ .Release.Namespace}}
 data:
   # property-like keys; each key maps to a simple value
-  apikeyRollover: "{{ .Values.configmap.apikeyRollover}}"
-  maxRetries: "{{ .Values.configmap.maxRetries}}"
-  keyVault: "{{ .Values.configmap.keyVault}}"
-  elasticUserSecretSuffix: "{{ .Values.configmap.elasticUserSecretSuffix}}"
-  ReconLoopInterval: "{{ .Values.configmap.ReconLoopInterval}}"
-  ApiGroup: "{{ .Values.configmap.ApiGroup}}"
-  ApiVersion: "{{ .Values.configmap.ApiVersion}}"
-  CacheTtl: "{{ .Values.configmap.CacheTtl}}"
-  Namespace: "{{ .Values.Operator.TenantNamespace}}"
-  LongRunningCheck: "{{ .Values.configmap.LongRunningCheck}}"
-  LongRunningMax: "{{ .Values.configmap.LongRunningMax}}"
+  apikeyRollover: "{{ .Values.ConfigMap.apikeyRollover}}"
+  maxRetries: "{{ .Values.ConfigMap.maxRetries}}"
+  keyVault: "{{ .Values.ConfigMap.keyVault}}"
+  elasticUserSecretSuffix: "{{ .Values.ConfigMap.elasticUserSecretSuffix}}"
+  ReconLoopInterval: "{{ .Values.ConfigMap.ReconLoopInterval}}"
+  ApiGroup: "{{ .Values.ConfigMap.ApiGroup}}"
+  ApiVersion: "{{ .Values.ConfigMap.ApiVersion}}"
+  CacheTtl: "{{ .Values.ConfigMap.CacheTtl}}"
+  Namespace: "{{ .Values.ConfigMap.Namespace}}"
+  LongRunningCheck: "{{ .Values.ConfigMap.LongRunningCheck}}"
+  LongRunningMax: "{{ .Values.ConfigMap.LongRunningMax}}"
