--- a/charts/elasticoperator/templates/rolebinding-tenant.yaml
+++ b/charts/elasticoperator/templates/rolebinding-tenant.yaml
@@ -2,8 +2,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Release.Name}}-rolebinding-tenant
-  namespace: {{ .Values.Operator.TenantNamespace}}
+  name: {{ .Release.Name}}-tenant
+  namespace: {{ .Values.Configmap.Namespace}}
 subjects:
 - namespace: {{ .Release.Namespace}} 
   kind: ServiceAccount
