--- a/charts/elasticoperator/templates/rolebinding-operator.yaml
+++ b/charts/elasticoperator/templates/rolebinding-operator.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Release.Name}}-rolebinding-operator
+  name: {{ .Release.Name}}-operator
   namespace: {{ .Release.Namespace}}
 subjects:
 - namespace: {{ .Release.Namespace}} 
