--- a/charts/elasticoperator/templates/rolebinding-tenant.yaml
+++ b/charts/elasticoperator/templates/rolebinding-tenant.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ .Release.Name}}-tenant
-  namespace: {{ .Values.Configmap.Namespace}}
+  namespace: {{ .Values.ConfigMap.Namespace}}
 subjects:
 - namespace: {{ .Release.Namespace}} 
   kind: ServiceAccount
