--- a/clusters/dev/elasticoperator/releases.yaml
+++ b/clusters/dev/elasticoperator/releases.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata: 
-  name: elasticoperator
+  name: iitech-elasticoperator
   namespace: system
 spec:
-  releaseName: elasticoperator
+  releaseName: iitech-elasticoperator
   targetNamespace: system
   chart:
     spec:
