--- a/charts/elasticoperator/templates/networkpolicy.yaml
+++ b/charts/elasticoperator/templates/networkpolicy.yaml
@@ -18,3 +18,10 @@ spec:
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: {{ .Values.ConfigMap.Namespace }}
+      ports:
+      - protocol: TCP
+        port: 9200
+        endPort: 9200
+      - protocol: TCP
+        port: 5601
+        endPort: 5601
