--- a/charts/elastic-cluster/templates/elastic.yaml
+++ b/charts/elastic-cluster/templates/elastic.yaml
@@ -1,4 +1,3 @@
-
 {{- define "elastic.oidc" }}
       xpack.security.authc.realms.oidc.myrealm:
         order: 1
@@ -13,7 +12,22 @@
         op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
         rp.post_logout_redirect_uri: "https://kibana.example.org:5601/security/logged_out"
         claims.principal: sub
-        claims.groups: "http://example.info/claims/groups"
+        claims.groups: "{{ .Values.oidc.claimurl }}"
+{{- end }}
+
+{{- define "elastic.securitycontext" }}
+        securityContext: 
+          runAsUser: 1000
+          fsGroup: 1000
+          runAsNonRoot: true
+{{- end }}
+
+{{- define "elastic.tolerations" }}
+        tolerations:
+          - key: myapp
+            operator: Equal
+            value: worker
+            effect: NoSchedule          
 {{- end }}
 
 
@@ -50,16 +64,9 @@ spec:
         nodeSelector:
           org.myorg.node-type/compute: "true"
 
-        tolerations:
-          - key: myapp
-            operator: Equal
-            value: worker
-            effect: NoSchedule          
+{{- template "elastic.tolerations" }}
 
-        securityContext: &ya_securityContext
-          runAsUser: 1000
-          fsGroup: 1000
-          runAsNonRoot: true
+{{- template "elastic.securitycontext" }}
 
         initContainers:
         - name: elastic-internal-init-keystore
@@ -90,11 +97,7 @@ spec:
     podTemplate:
       spec:
 
-        tolerations:
-          - key: myapp
-            operator: Equal
-            value: worker
-            effect: NoSchedule          
+{{- template "elastic.tolerations" }}
 
         initContainers:
         - name: elastic-internal-init-keystore
@@ -108,7 +111,7 @@ spec:
           - name: ZONE
             value: dummyzone
 
-        securityContext: *ya_securityContext
+{{- template "elastic.securitycontext" }}
 {{ end }}      
 
 
@@ -128,11 +131,7 @@ spec:
     podTemplate:
       spec:
 
-        tolerations:
-          - key: myapp
-            operator: Equal
-            value: worker
-            effect: NoSchedule          
+{{- template "elastic.tolerations" }}
 
         initContainers:
         - name: elastic-internal-init-keystore
@@ -147,7 +146,7 @@ spec:
             value: dummyzone
 
 
-        securityContext: *ya_securityContext
+{{- template "elastic.securitycontext" }}
 {{ end }}      
 
 {{ if gt ( .Values.ingest.nodeset.count |toString|atoi) 0 }}
@@ -165,11 +164,7 @@ spec:
     podTemplate:
       spec:
 
-        tolerations:
-          - key: myapp
-            operator: Equal
-            value: worker
-            effect: NoSchedule          
+{{- template "elastic.tolerations" }}
 
         initContainers:
         - name: elastic-internal-init-keystore
@@ -187,6 +182,6 @@ spec:
         nodeSelector:
           org.myorg.node-type/compute: "true"   
 
-        securityContext: *ya_securityContext
+{{- template "elastic.securitycontext" }}
 
 {{ end }}      
