--- a/charts/elastic-cluster/templates/elastic.yaml
+++ b/charts/elastic-cluster/templates/elastic.yaml
@@ -1,37 +1,20 @@
+
+{{- define "elastic.noderoles" }}
+      node.roles: [{{ join "," .roles  }} ]
+{{- end }}
+
 {{- define "elastic.zoneawareness"}}
       cluster.routing.allocation.awareness.attributes: zone
       node.attr.zone: ${ZONE}
 {{- end }}
 
-{{- define "elastic.containers"}}
-        initContainers:
-        - name: elastic-internal-init-keystore
-          env:
-          - name: ZONE
-            value: dummyzone
 
-        containers:
-        - name: elasticsearch
-          env:
-          - name: ZONE
-            value: dummyzone
-{{- end}}
-
-
-{{- define "elastic.volumeclaim"}}
-    volumeClaimTemplates:
-    - metadata:
-        name: elasticsearch-data # Do not change this name unless you set up a volume mount for the data path.
-      spec:
-        accessModes:
-        - ReadWriteOnce
-        resources:
-          requests:
-            storage: {{ .storage}}
-        storageClassName: {{ .storageclass}}
-{{- end}}
+{{- define "elastic.mmap"}}
+      node.store.allow_mmap: {{ .Values.production.enabled }}
+{{ end }}
 
 {{- define "elastic.oidc" }}
+{{ if  .Values.oidc.enabled }}
       xpack.security.authc.realms.native.native1:
         order: 0
       xpack.security.authc.realms.oidc.myrealm:
@@ -49,13 +32,18 @@
         claims.principal: sub
         claims.groups: "{{ .Values.oidc.claimurl }}"
 {{- end }}
-
-{{- define "elastic.securitycontext" }}
-        securityContext: 
-          runAsUser: 1000
-          fsGroup: 1000
-          runAsNonRoot: true
 {{- end }}
+
+
+{{- define "elastic.config" }}
+{{- $root := index . 0 -}}
+{{- $local := index . 1 -}}
+{{- template "elastic.mmap" $root }}
+{{- template "elastic.zoneawareness" $local }}
+{{- template "elastic.noderoles" $local }}
+{{- template "elastic.oidc" $root }}
+{{- end }}
+
 
 {{- define "elastic.tolerations" }}
         tolerations:
@@ -66,33 +54,103 @@
 {{- end }}
 
 
+{{- define "elastic.nodeselector" }}
+        nodeSelector:
+          org.myorg.node-type/compute: "true" 
+{{- end }}
+
+
+
+{{- define "elastic.initcontainers"}}
+        initContainers:
+{{ if  .Values.production.enabled }}
+        - name: sysctl
+          securityContext:
+            privileged: true
+          command: ['sh', '-c', 'sysctl -w vm.max_map_count=262144']
+{{ end }}
+
+{{ if  .Values.oidc.enabled }}
+        - name: elastic-internal-init-keystore
+          env:
+          - name: ZONE
+            value: dummyzone
+{{ end }}
+
+{{- end}}
+
+{{- define "elastic.containers"}}
+        containers:
+        - name: elasticsearch
+          resources:
+            limits:
+              memory: {{ .limits.memory}}
+              cpu: {{ .limits.cpu}}
+            requests:
+              memory: {{ .requests.memory}}
+              cpu: {{ .requests.cpu}}        
+          env:
+          - name: ZONE
+            value: dummyzone
+{{- end}}
+
+{{- define "elastic.securitycontext" }}
+        securityContext: 
+          runAsUser: 1000
+          fsGroup: 1000
+          runAsNonRoot: true
+{{- end }}
+
+{{- define "elastic.podtemplate" }}
+{{- $root := index . 0 }}
+{{- $local := index . 1 }}
+    podTemplate:
+      spec:
+{{- template "elastic.nodeselector" $local }}
+{{- template "elastic.tolerations" $local }}
+{{- template "elastic.securitycontext" $local }}
+{{- template "elastic.initcontainers" $root }}
+{{- template "elastic.containers" $local }}
+{{- end }}
+
+
+{{- define "elastic.volumeclaim"}}
+    volumeClaimTemplates:
+    - metadata:
+        name: elasticsearch-data # Do not change this name unless you set up a volume mount for the data path.
+      spec:
+        accessModes:
+        - ReadWriteOnce
+        resources:
+          requests:
+            storage: {{ .storage}}
+        storageClassName: {{ .storageclass}}
+{{- end}}
+
+
+{{- define "elastic.securesettings" }}
+
+{{ if  .Values.oidc.enabled }}
+  secureSettings:
+  - secretName: mysecret
+{{ end }}
+{{ end }}
+
+
+
+
 {{- define "elastic.nodeset" }}
 {{- $root := index . 0 -}}
 {{- $local := index . 1 -}}
 {{ if gt ( $local.count |toString|atoi) 0 }}
-
   - name: {{ $local.name}}
     count: {{ $local.count}}
     config:
-      node.roles: {{ $local.roles}}
-{{- template "elastic.zoneawareness" $local }}
-      node.store.allow_mmap: false
-{{- template "elastic.oidc" $root }}
-
-    podTemplate:
-      spec:
-        nodeSelector:
-          org.myorg.node-type/compute: "true" 
-
-
-{{- template "elastic.tolerations" $local }}
-{{- template "elastic.securitycontext" $local }}
-{{- template "elastic.containers" $local }}
+{{- template "elastic.config" (list $root $local) }}
+{{- template "elastic.podtemplate" (list $root $local) }}
 {{- template "elastic.volumeclaim" $local }}
 
 {{ end }}
-
-
 
 {{- end }}
 
@@ -103,10 +161,9 @@ metadata:
   namespace: {{ .Release.Namespace }}  
 spec:
   version: {{ .Values.elastic.version }}
-#  image: deckkh/elasticsearch:8.1.3
 
-  secureSettings:
-  - secretName: mysecret
+{{- template "elastic.securesettings" . }}
+
 
   nodeSets:
 
@@ -114,3 +171,5 @@ spec:
 {{- template "elastic.nodeset" (list .  .Values.data.nodeset)}}
 {{- template "elastic.nodeset" (list .  .Values.datahot.nodeset)}}
 {{- template "elastic.nodeset" (list .  .Values.ingest.nodeset)}}
+
+
