--- a/charts/elastic-cluster/values.yaml
+++ b/charts/elastic-cluster/values.yaml
@@ -20,7 +20,7 @@ master:
       - '"master"'
       - '"remote_cluster_client"'    
     storage: 1Gi
-    storageclass: "default"
+    storageclass: "standard"
     limits: 
       memory: 2Gi
       cpu: 2
@@ -37,7 +37,7 @@ data:
       - '"ml"'
       - '"remote_cluster_client"'
     storage: 1Gi
-    storageclass: "default"
+    storageclass: "standard"
     limits: 
       memory: 2Gi
       cpu: 2
@@ -53,7 +53,7 @@ datahot:
       - '"data_hot"'
       - '"data_content"'    
     storage: 1Gi
-    storageclass: "default"
+    storageclass: "standard"
     limits: 
       memory: 2Gi
       cpu: 2
@@ -69,7 +69,7 @@ ingest:
       - '"ingest"'
       - '"remote_cluster_client"'
     storage: 1Gi
-    storageclass: "default"
+    storageclass: "standard"
     limits: 
       memory: 2Gi
       cpu: 2
