--- a/charts/elastic-cluster/templates/clustersetting-monitoring.yaml
+++ b/charts/elastic-cluster/templates/clustersetting-monitoring.yaml
@@ -13,7 +13,7 @@ spec:
             "xpack" : {
               "monitoring" : {
                 "collection" : {
-                  "enabled" : "false"
+                  "enabled" : "true"
                 }
               }
             }
