--- a/charts/elastic-cluster/charts/apikeys/Chart.yaml
+++ b/charts/elastic-cluster/charts/apikeys/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: elastic-cluster-apikeys
-description: A Helm chart for Kubernetes apikey
+name: apikeys
+description: apikeys
 
 # A chart can be either an 'application' or a 'library' chart.
 #
