--- a/charts/elastic-cluster/charts/apikeys/templates/threehour.yaml
+++ b/charts/elastic-cluster/charts/apikeys/templates/threehour.yaml
@@ -1,4 +1,4 @@
-{{ if   .Values.apikeys.threehour }}
+{{ if   .Values.threehour }}
 apiVersion: elastic.elastic-operator/v1
 kind: ApiKey
 metadata:
