--- a/charts/elastic-cluster/charts/clustersettings/templates/monitoring.yaml
+++ b/charts/elastic-cluster/charts/clustersettings/templates/monitoring.yaml
@@ -1,4 +1,4 @@
-{{ if   .Values.clustersettings.monitoring }}
+{{ if   .Values.monitoring }}
 apiVersion: elastic.elastic-operator/v1
 kind: ClusterSetting
 metadata:
