--- a/charts/elastic-cluster/charts/clustersettings/templates/routingallocationdisk.yaml
+++ b/charts/elastic-cluster/charts/clustersettings/templates/routingallocationdisk.yaml
@@ -1,4 +1,4 @@
-{{ if   .Values.clustersettings.routingallocationdisk }}
+{{ if   .Values.routingallocationdisk }}
 apiVersion: elastic.elastic-operator/v1
 kind: ClusterSetting
 metadata:
