--- a/charts/elastic-cluster/charts/apikeys/templates/noexpire.yaml
+++ b/charts/elastic-cluster/charts/apikeys/templates/noexpire.yaml
@@ -1,27 +1,22 @@
-{{ if   .Values.apikeys.filebeat }}
+{{ if   .Values.noexpire }}
 apiVersion: elastic.elastic-operator/v1
 kind: ApiKey
 metadata:
-  name: {{.Release.Name}}-apikey-filebeat
+  name: {{.Release.Name}}-apikey-noexpire
   namespace: {{ .Release.Namespace}}
 spec:
-  name: filebeat
+  name: noexpire
   cluster: {{ .Release.Name}}
-  owner:
-    pipeline: mypipeline2
-    team: myteam2
-    email: "myemail2@corp.com"
   body: |
         {
-          "name": "filebeat",
-          "expiration": "10d",   
+          "name": "noexpire",
           "role_descriptors": { 
             "role-a": {
               "cluster": ["all"],
               "index": [
                 {
-                  "names": ["filebeat-*"],
-                  "privileges": ["read","create","write"]
+                  "names": ["noexpire-*"],
+                  "privileges": ["read","create"]
                 }
               ]
             }
