--- a/charts/elastic-cluster/charts/apikeys/templates/sprint.yaml
+++ b/charts/elastic-cluster/charts/apikeys/templates/sprint.yaml
@@ -1,21 +1,26 @@
-{{ if   .Values.apikeys.noexpire }}
+{{ if   .Values.sprint }}
 apiVersion: elastic.elastic-operator/v1
 kind: ApiKey
 metadata:
-  name: {{.Release.Name}}-apikey-noexpire
+  name: {{.Release.Name}}-apikey-sprint
   namespace: {{ .Release.Namespace}}
 spec:
-  name: noexpire
+  name: sprint
+  owner:
+    pipeline: devopsxx
+    team: "My Team"
+    email: "manager@corp.com"
   cluster: {{ .Release.Name}}
   body: |
         {
-          "name": "noexpire",
+          "name": "sprint",
+          "expiration": "30d",   
           "role_descriptors": { 
             "role-a": {
               "cluster": ["all"],
               "index": [
                 {
-                  "names": ["noexpire-*"],
+                  "names": ["sprint-*"],
                   "privileges": ["read","create"]
                 }
               ]
